Add header markup and normalize styles for website

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- (end of) Icons -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Auto Express</title>
+    <title>Auto Express &#128664; Авто из США</title>
   </head>
 
   <body>
