--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     <!-- (end of) Icons -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap"
+      rel="stylesheet" />
+    <!-- (end of) Fonts -->
+
     <title>Auto Express &#128664; Авто из США</title>
   </head>
 
