Add section Services markup and styles

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Авто из США" />
+    <meta
+      name="description"
+      content="Авто из США &#8220;под ключ&#8221;. Закажи себе авто из США с выгодой до 40&#37;" />
 
     <!-- Icons -->
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
